add: working database url

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=backend
 
 # Data Source Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.url=jdbc:postgresql://localhost:<port>/<database-name>
+spring.datasource.url=jdbc:postgresql://localhost:5432/sebastian-website
 spring.datasource.username=noetrevino
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
