--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.26.0",
+    "@wavesurfer/react": "^1.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "wavesurfer.js": "^7.8.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
