--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,17 @@ spring.application.name=backend
 # Data Source Configuration
 # spring.datasource.url=jdbc:postgresql://localhost:<port>/<database-name>
 spring.datasource.url=jdbc:postgresql://localhost:5432/sebastian-website
-spring.datasource.username=noetrevino
+spring.datasource.username=postgres
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+#email 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noetrevino.music@gmail.com
+spring.mail.password=REDACTED
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
