add: default schema env var

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.password=${EMAIL_PW}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.jpa.properties.hibernate.default_schema=sebastian
+spring.jpa.properties.hibernate.default_schema=${DEFAULT_SCHEMA} 
 spring.jpa.hibernate.ddl-auto=none
 
 
