--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.6.2",
+    "prettier-plugin-java": "^2.7.5",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
